# sales_flow_analytics

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  sql.sql
config/: config.py
database/: database.py  sql_queries.py  utils.py
static/: app.js  index.html  style.css
utils/: async_http_client.py  utils.py
